--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <button id="clear-btn"> AC </button>
             <button id="delete-number-btn"> DEL </button>
             <button id="divide-btn"> % </button>
+            <button id="switch-sign"> -/+ </button>
             <button id="1-btn">1</button>
             <button id="2-btn">2</button>
             <button id="3-btn">3</button>
