Make the calculator screen functional (not refined)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="calculator-screen">
-
+            <div id="calculator-history"></div>
+            <div id="calculator-output"></div>
         </div>
         <div id="calculator-buttons">
             <button id="clear-btn">AC</button>
